Prepare backend for Render without committing API keys.
Co-authored-by: Cursor <cursoragent@cursor.com>